@@ -27,15 +27,15 @@ xrefresh_LDADD = $(XREFRESH_LIBS)
 xrefresh_SOURCES =	\
         xrefresh.c
 
-appman_SOURCES = \
+appman_PRE = \
         xrefresh.man
 
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST = $(appman_SOURCES)
+EXTRA_DIST = $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
